Changed the name

--- a/index.html
+++ b/index.html
@@ -5,21 +5,40 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<!-- 	This is the "Head" of the HTML document.
+		It contains information that isn't displayed on the actual page, but is useful
+		for the web browser when loading the page	
+	-->
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
+		<title>Lawrence Marfo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- 	This links to this page's CSS, which is contained in the folder assets/css and the file main.css.
+			 If you want to edit the styling of this page, you should edit the file assets/css/main.css
+			 If you have a new CSS file you'd like to add with custom styling, you should link to it here using:
+			 <link rel="stylesheet" href="assets/css/my-new-css-file.css"/> 
+		-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- 	In the case that the user's browser does not support JavaScript (unlikely, but possible), the page
+			will load a separate set of CSS stylings from the file assets/css/noscript.css
+			Any HTML contained inside <noscript></noscript> tags will be loaded in the event that JavaScript is not
+			available. 
+		-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<!-- The body is the location where your site's content will go -->
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
+		<!-- This "div" wraps around all of our content and just changes how things are layed out -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
+				<!-- This is where the content that appears on page load exists -->
+				<!-- This is the main content of the front page -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Marfo</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
