Changed Generic page to the About Me page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
+								<li><a href="generic.html">About Me</a></li>
 								<li><a href="elements.html">Elements</a></li>
 								<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li>
@@ -81,7 +81,8 @@
 										<!-- This changes the first paragraph of the code -->
 										<h2 class="major">About Me</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<!--a href="#" class="special"-->
+										<a href="generic.html">Learn more</a>
 										<!-- The link doesnt actually go anywhere-->
 									</div>
 								</div>
