--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">About Me</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="elements.html">Projects</a></li>
 								<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li>
 							</ul>
@@ -95,7 +95,9 @@
 									<div class="content">
 										<h2 class="major">Projects</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<!--a href="#" class="special"-->
+										<a href="elements.html">Learn more</a>
+										<!-- This links the learn more to the elements page-->
 									</div>
 								</div>
 							</section>
@@ -121,31 +123,37 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
+											<!-- This is the code that changes the name of the leadership tab-->
+											<h3 class="major">Leadership</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<!-- This code changes the engineering tab-->
+											<h3 class="major">Engineering</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
+											<!-- This code changes the Coding tab-->
+											<h3 class="major">Coding</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
+											<!-- This code changes the Random tab-->
+											<h3 class="major">Interests</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
+											<!--You will have to create a link for this tab-->
 										</article>
 									</section>
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
+										<!-- you can either delete this thing or create a link for it-->
 									</ul>
 								</div>
 							</section>
@@ -177,14 +185,15 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
+								<!--The codes that I dont need will become comments-->
+								<!--li class="icon solid fa-home">
 									Untitled Inc<br />
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+								</li-->
+								<!--li class="icon solid fa-phone">(000) 000-0000</li-->
+								<li class="icon solid fa-envelope"><a href="#">law_marfo@yahoo.com</a></li>
+								<!--li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li-->
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
