--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								</li-->
 								<!--li class="icon solid fa-phone">(000) 000-0000</li-->
 								<li class="icon solid fa-envelope"><a href="#">law_marfo@yahoo.com</a></li>
-								<!--li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li-->
+								<li class="icon brands fa-linkedin"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
