--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<div class="content">
 										<!-- This changes the first paragraph of the code -->
 										<h2 class="major">About Me</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>I am an engineering major with a math and robotics minor at James Madison University. I have six years of experience in leadership developement and coaching at the Student Leadership Center of James Madison University... </p>
 										<!--a href="#" class="special"-->
 										<a href="generic.html">Learn more</a>
 										<!-- The link doesnt actually go anywhere-->
@@ -94,7 +94,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>A collection of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineerings and creating products for clients...</p>
 										<!--a href="#" class="special"-->
 										<a href="elements.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
