--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Community</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>A University is not without its campus, and a campus is not without its community. This is a collection of my involvement in the James Madison community and how that shaped my...</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
