--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
-										<p>A collection of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineerings and creating products for clients...</p>
+										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineerings and creating products for clients...</p>
 										<!--a href="#" class="special"-->
 										<a href="elements.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
@@ -119,13 +119,13 @@
 								<div class="inner">
 									<!-- This changes the bottom wrapper Titled the different sides-->
 									<h2 class="major">The Different Sides</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<p>A collection of the all the skills that I am developing. Each section contains my progress so far and a plan of action for further development.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<!-- This is the code that changes the name of the leadership tab-->
 											<h3 class="major">Leadership</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>"Leadership should mean giving control rather than taking control and creating leaders rather than forging followers" - David Marquet</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
@@ -139,14 +139,14 @@
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<!-- This code changes the Coding tab-->
 											<h3 class="major">Coding</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Progress in programming is done from failure and failure again. I am just beginning my programming journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<!-- This code changes the Random tab-->
 											<h3 class="major">Interests</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p> The goal is to be a life long learner. These is populated with things I find interesting</p>
 											<a href="#" class="special">Learn more</a>
 											<!--You will have to create a link for this tab-->
 										</article>
