I had to save the file first

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<!-- This code changes the engineering tab-->
 											<h3 class="major">Engineering</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p> It is not just a title. There is a responsibility that comes within each discipline. Here is what I learned </p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
@@ -144,7 +144,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<!-- This code changes the Random tab-->
+											<!-- This code changes the Random Interest tab-->
 											<h3 class="major">Interests</h3>
 											<p> The goal is to be a life long learner. These is populated with things I find interesting</p>
 											<a href="#" class="special">Learn more</a>
