--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
-										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineerings and creating products for clients...</p>
+										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
 										<!--a href="#" class="special"-->
 										<a href="elements.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
@@ -164,7 +164,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>I will post upates regularly but you can get in touch with me from below</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
