--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">About Me</a></li>
 								<li><a href="elements.html">Projects</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#">Leadership</a></li>
+								<li><a href="#">Coding</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
