changed the picture and the failure/success comment

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<!--here is the exact part where I change the name-->
 							<h2>The Journey Begins</h2>
-							<p>Documenting my journey of success and failure <!--<a href="http://html5up.net">HTML5 UP</a>--></p>
+							<p>Documenting my journey of failure and success <!--<a href="http://html5up.net">HTML5 UP</a>--></p>
 						</div>
 					</section>
 
