--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Marfo</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -33,8 +33,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">About Me</a></li>
 								<li><a href="elements.html">Projects</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#">Leadership</a></li>
+								<li><a href="#">Coding</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
