--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">About Me</a></li>
-								<li><a href="elements.html">Projects</a></li>
+								<li><a href="aboutme.html">About Me</a></li>
+								<li><a href="projects.html">Projects</a></li>
 								<li><a href="#">Leadership</a></li>
 								<li><a href="#">Coding</a></li>
 							</ul>
