fixed the links for the about me and project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<h2 class="major">About Me</h2>
 										<p>I am an engineering major with a math and robotics minor at James Madison University. I have six years of experience in leadership developement and coaching at the Student Leadership Center of James Madison University... </p>
 										<!--a href="#" class="special"-->
-										<a href="generic.html">Learn more</a>
+										<a href="aboutme.html">Learn more</a>
 										<!-- The link doesnt actually go anywhere-->
 									</div>
 								</div>
@@ -96,7 +96,7 @@
 										<h2 class="major">Projects</h2>
 										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
 										<!--a href="#" class="special"-->
-										<a href="elements.html">Learn more</a>
+										<a href="projects.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
 									</div>
 								</div>
@@ -109,7 +109,7 @@
 									<div class="content">
 										<h2 class="major">Community</h2>
 										<p>A University is not without its campus, and a campus is not without its community. This is a collection of my involvement in the James Madison community and how that shaped my...</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="elements.html">Learn more</a>
 									</div>
 								</div>
 							</section>
