added new pages and content for the website

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="#">Leadership</a></li>
-								<li><a href="#">Coding</a></li>
+								<li><a href="leadership.html">Leadership</a></li>
+								<li><a href="elements.html">Coding</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -76,7 +76,7 @@
 						<!-- One- this is the first paragraph -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="aboutme.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<!-- This changes the first paragraph of the code -->
 										<h2 class="major">About Me</h2>
@@ -91,7 +91,7 @@
 						<!-- Two -this is the second paragraph  -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="projects.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
 										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
@@ -105,11 +105,11 @@
 						<!-- Three- This is the third paragraph in the code -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="community.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Community</h2>
 										<p>A University is not without its campus, and a campus is not without its community. This is a collection of my involvement in the James Madison community and how that shaped my...</p>
-										<a href="elements.html">Learn more</a>
+										<a href="community.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -122,37 +122,37 @@
 									<p>A collection of the all the skills that I am developing. Each section contains my progress so far and a plan of action for further development.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="leadership.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<!-- This is the code that changes the name of the leadership tab-->
 											<h3 class="major">Leadership</h3>
 											<p>"Leadership should mean giving control rather than taking control and creating leaders rather than forging followers" - David Marquet</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="leadership.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="projects.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<!-- This code changes the engineering tab-->
 											<h3 class="major">Engineering</h3>
 											<p> It is not just a title. There is a responsibility that comes within each discipline. Here is what I learned </p>
-											<a href="#" class="special">Learn more</a>
+											<a href="projects.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="generic.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<!-- This code changes the Coding tab-->
 											<h3 class="major">Coding</h3>
 											<p>Progress in programming is done from failure and failure again. I am just beginning my programming journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
-											<a href="#" class="special">Learn more</a>
+											<a href="generic.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="elements.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<!-- This code changes the Random Interest tab-->
 											<h3 class="major">Interests</h3>
-											<p> The goal is to be a life long learner. These is populated with things I find interesting</p>
-											<a href="#" class="special">Learn more</a>
+											<p> The goal is to be a life long learner. This is populated with things I find interesting</p>
+											<a href="elements.html" class="special">Learn more</a>
 											<!--You will have to create a link for this tab-->
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="projects.html" class="button">Browse All</a></li>
 										<!-- you can either delete this thing or create a link for it-->
 									</ul>
 								</div>
@@ -161,48 +161,34 @@
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>I will post upates regularly but you can get in touch with me from below</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<!--The codes that I dont need will become comments-->
-								<!--li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li-->
-								<!--li class="icon solid fa-phone">(000) 000-0000</li-->
-								<li class="icon solid fa-envelope"><a href="#">law_marfo@yahoo.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+				<section id="footer">
+					<div class="inner">
+						<section>
+							<h2 class="major">Let's Stay Connected</h2>
+							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<div class="form-wrapper w-form">
+								<form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix">
+									<input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="field w-input">
+									<input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button">
+								</form>
+								
+							</div>
+						</section>
+						<section>
+							<h2 class="major">Get in Touch</h2>
+							<ul class="icons">
+								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/le_marfo/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="www.linkedin.com/in/lawrencemarfoEngineering" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
-						</div>
-					</section>
-
+						</section>
+					</div>
+				</section>
 			</div>
 
 		<!-- Scripts -->
