--- a/leadership.html
+++ b/leadership.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Projects</title>
+		<title>Leadership</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="generic.html">Leadership</a></li>
+								<li><a href="leadership.html">Leadership</a></li>
 								<li><a href="generic.html">Coding</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -44,7 +44,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Projects</h2>
+								<h2>Leadership Center</h2>
 								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
 							</div>
 						</header>
@@ -74,35 +74,6 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
-										<article>
-											<a href="leadership.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<!-- This is the code that changes the name of the leadership tab-->
-											<h3 class="major">Leadership</h3>
-											<p>"Leadership should mean giving control rather than taking control and creating leaders rather than forging followers" - David Marquet</p>
-											<a href="leadership.html" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="projects.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<!-- This code changes the engineering tab-->
-											<h3 class="major">Engineering</h3>
-											<p> It is not just a title. There is a responsibility that comes within each discipline. Here is what I learned </p>
-											<a href="projects.html" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="generic.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<!-- This code changes the Coding tab-->
-											<h3 class="major">Coding</h3>
-											<p>Progress in programming is done from failure and failure again. I am just beginning my programming journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
-											<a href="generic.html" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="elements.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<!-- This code changes the Random Interest tab-->
-											<h3 class="major">Interests</h3>
-											<p> The goal is to be a life long learner. This is populated with things I find interesting</p>
-											<a href="elements.html" class="special">Learn more</a>
-											<!--You will have to create a link for this tab-->
-										</article>
 									</section>
 
 								</div>
@@ -123,9 +94,6 @@
 								</form>
 								
 							</div>
-							<!--ul class="actions">
-								<li><a href="aboutme.html" class="button">Learn More</a></li>
-							</ul-->
 						</section>
 						<section>
 							<h2 class="major">Get in Touch</h2>
