--- a/generic.html
+++ b/generic.html
@@ -33,8 +33,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">About Me</a></li>
 								<li><a href="elements.html">Projects</a></li>
-								<li><a href="#">Leadership</a></li>
-								<li><a href="#">Coding</a></li>
+								<li><a href="leadership.html">Leadership</a></li>
+								<li><a href="generic.html">Coding</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
