Pig Latin Change
Changed the pig latin portion to real words

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<div class="inner">
 						<section>
 							<h2 class="major">Let's Stay Connected</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<p>How cool would it be if this actually worked. Sadly, we will just have to imagine.</p>
 							<div class="form-wrapper w-form">
 								<form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix">
 									<input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="field w-input">
