updated the entire website

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<!--here is the exact part where I change the name-->
 							<h2>The Journey Begins</h2>
-							<p>Documenting my journey of failure and success <!--<a href="http://html5up.net">HTML5 UP</a>--></p>
+							<p>Documenting my Career. Hardships and Everything <!--<a href="http://html5up.net">HTML5 UP</a>--></p>
 						</div>
 					</section>
 
@@ -80,7 +80,7 @@
 									<div class="content">
 										<!-- This changes the first paragraph of the code -->
 										<h2 class="major">About Me</h2>
-										<p>I am an engineering major with a math and robotics minor at James Madison University. I have six years of experience in leadership developement and coaching at the Student Leadership Center of James Madison University... </p>
+										<p>Hey there, fellow data enthusiasts and tech aficionados! I'm thrilled to welcome you to my digital corner, where I'll be unraveling the exhilarating narrative of my life as a Data and Machine Learning engineer at none other than the trailblazing Amazon Web Services (AWS). So, grab your virtual seat and let's dive into my world of algorithms, cloud architecture, and turning raw data into actionable insights! </p>
 										<!--a href="#" class="special"-->
 										<a href="aboutme.html">Learn more</a>
 										<!-- The link doesnt actually go anywhere-->
@@ -94,7 +94,7 @@
 									<a href="projects.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
-										<p>A variety of the projects that I have completed during my college career. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
+										<p>A variety of the projects that I have completed during my College and Corporate. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
 										<!--a href="#" class="special"-->
 										<a href="projects.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
@@ -108,7 +108,7 @@
 									<a href="community.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Community</h2>
-										<p>A University is not without its campus, and a campus is not without its community. This is a collection of my involvement in the James Madison community and how that shaped my...</p>
+										<p>In my world, collaboration isn't just a buzzword—it's the driving force behind every breakthrough. Collaborating with diverse teams, brainstorming wild ideas, and weaving them into tangible, real-world applications exhilarates me like nothing else. Translating abstract concepts into concrete solutions isn't just a job; it's an art that requires finesse and ingenuity.</p>
 										<a href="community.html">Learn more</a>
 									</div>
 								</div>
@@ -138,8 +138,8 @@
 										<article>
 											<a href="generic.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<!-- This code changes the Coding tab-->
-											<h3 class="major">Coding</h3>
-											<p>Progress in programming is done from failure and failure again. I am just beginning my programming journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
+											<h3 class="major">Career</h3>
+											<p>Progress in programming is done from failure and failure again. I am just beginning my Corporate journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
 											<a href="generic.html" class="special">Learn more</a>
 										</article>
 										<article>
@@ -164,23 +164,23 @@
 				<section id="footer">
 					<div class="inner">
 						<section>
-							<h2 class="major">Let's Stay Connected</h2>
-							<p>How cool would it be if this actually worked. Sadly, we will just have to imagine.</p>
-							<div class="form-wrapper w-form">
+							<h2 class="major">More to Come</h2>
+							<p>I will continue adding more projects as I grow in the field</p>
+							<!--div class="form-wrapper w-form">
 								<form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix">
 									<input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="field w-input">
 									<input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button">
 								</form>
 								
-							</div>
+							</div-->
 						</section>
 						<section>
 							<h2 class="major">Get in Touch</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/le_marfo/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<!--li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li-->
+								<!--li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li-->
+								<!--li><a href="https://www.instagram.com/le_marfo/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li-->
+								<!--li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li-->
 								<li><a href="https://www.linkedin.com/in/lawrencemarfoengineering/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
