--- a/community.html
+++ b/community.html
@@ -96,23 +96,14 @@
                 <section id="footer">
 					<div class="inner">
 						<section>
-							<h2 class="major">Let's Stay Connected</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<div class="form-wrapper w-form">
-								<form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix">
-									<input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="field w-input">
-									<input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button">
-								</form>
-								
-							</div>
+							<h2 class="major">More to Come</h2>
+							<p>I will continue adding more projects as I grow in the field</p>
+							
 						</section>
 						<section>
 							<h2 class="major">Get in Touch</h2>
+			
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/le_marfo/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="www.linkedin.com/in/lawrencemarfoEngineering" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
