--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 						<header>
 							<div class="inner">
 								<h2>Projects</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<p>Some on my personal favorites</p>
 							</div>
 						</header>
 
@@ -53,54 +53,53 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+									<h3 class="major">Pioneering Projects: Illuminating the Path of Innovation</h3>
+									<p>In my world, collaboration isn't just a buzzword—it's the driving force behind every breakthrough. Collaborating with diverse teams, brainstorming wild ideas, and weaving them into tangible, real-world applications exhilarates me like nothing else. Translating abstract concepts into concrete solutions isn't just a job; it's an art that requires finesse and ingenuity.</p>
+									<p>In the dynamic world of data, projects are the crucibles where ideas take shape, algorithms come to life, and data tells its captivating stories. Throughout my journey, I've had the privilege of spearheading an array of projects that have not only pushed technological boundaries but have also left an indelible mark on industries and businesses.</p>
 
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h3 class="major">The Uncharted Horizons Ahead</h3>
+									<p>While these projects stand as testaments to the capabilities of data and machine learning, they're just glimpses of the expansive landscape that lies ahead. Each project has added a layer of expertise to my toolkit, and I'm eagerly anticipating the uncharted territories I'll explore next. From healthcare to finance, e-commerce to manufacturing, the world of data projects is boundless, and I'm ready to continue crafting solutions that drive innovation, empower businesses, and illuminate the path toward a data-driven future.</p>
 
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Unveiling Hidden Patterns: Fraud Detection System</h3>
+											<p>One of my most exhilarating projects was the development of a cutting-edge fraud detection system for a financial institution. In a landscape rife with ever-evolving fraudulent tactics, crafting a solution that could swiftly and accurately identify suspicious patterns within massive datasets was both challenging and rewarding. Leveraging machine learning algorithms and real-time data processing, we not only bolstered the security of financial transactions but also contributed to safeguarding the trust of countless customers.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Personalization at Scale: Recommender Engine</h3>
+											<p>Another milestone project revolved around building a robust recommender engine. he aim was to deliver personalized product recommendations to millions of users, enhancing their shopping experiences and driving conversions. This endeavor involved orchestrating intricate data pipelines, exploring collaborative and content-based filtering techniques, and fine-tuning algorithms to strike the delicate balance between accuracy and scalability.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="leadership.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<!-- This is the code that changes the name of the leadership tab-->
-											<h3 class="major">Leadership</h3>
-											<p>"Leadership should mean giving control rather than taking control and creating leaders rather than forging followers" - David Marquet</p>
-											<a href="leadership.html" class="special">Learn more</a>
+											<h3 class="major">Migration and Modernization</h3>
+											<p>Navigating the journey from legacy on-premises systems to the cloud is a voyage many businesses embark upon. I had the privilege of joining transformative project involving the migration and modernization of an institution's data infrastructure onto AWS. Beyond the technical intricacies, this endeavor required strategic planning, meticulous execution, and seamless integration to ensure minimal disruption to critical operations</p>
+											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="projects.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<!-- This code changes the engineering tab-->
-											<h3 class="major">Engineering</h3>
-											<p> It is not just a title. There is a responsibility that comes within each discipline. Here is what I learned </p>
-											<a href="projects.html" class="special">Learn more</a>
+											<h3 class="major">From Insights to Action: Predictive Maintenance</h3>
+											<p>In most sectors, the marriage of data and machine learning has the potential to revolutionize operations. A memorable project involved implementing a predictive maintenance solution for a manufacturing company. By analyzing sensor data, detecting anomalies, and predicting equipment failures, we empowered the client to shift from reactive to proactive maintenance strategies.</p>
+											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="generic.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<!-- This code changes the Coding tab-->
-											<h3 class="major">Coding</h3>
-											<p>Progress in programming is done from failure and failure again. I am just beginning my programming journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
-											<a href="generic.html" class="special">Learn more</a>
+											<h3 class="major">Above the Field: Impact Detection</h3>
+											<p>Imagine a world where machines can predict injuries, months before they occur. That's precisely the ambition behind a captivating project that I had the opportunity to join- an AI-powered impact detection system for the nfl. Collaborating with a team of developers and engineers, we created a model that would detect body to body impacts of nfl athletes given a video. This innovative tool will be foundation in player next level player safety</p>
+											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="elements.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<!-- This code changes the Random Interest tab-->
-											<h3 class="major">Interests</h3>
-											<p> The goal is to be a life long learner. This is populated with things I find interesting</p>
-											<a href="elements.html" class="special">Learn more</a>
+											<h3 class="major">NASA BIG IDEA: Greenhouse on Mars</h3>
+											<p>My passionate Capstone project about creating an autonomous Greenhouse on Mars. The project's focus this past year was on creating a physical prototype of one of the plant housing carts equipped with a hydroponics system and sensors to monitor environmental changes.</p>
+											<a href="#" class="special">Learn more</a>
 											<!--You will have to create a link for this tab-->
 										</article>
 									</section>
@@ -114,34 +113,14 @@
 				<section id="footer">
 					<div class="inner">
 						<section>
-							<h2 class="major">Let's Stay Connected</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<div class="form-wrapper w-form">
-								<form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix">
-									<input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="field w-input">
-									<input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button">
-								</form>
-								
-							</div>
-							<!--ul class="actions">
-								<li><a href="aboutme.html" class="button">Learn More</a></li>
-							</ul-->
+							<h2 class="major">More to Come</h2>
+							<p>I will continue adding more projects as I grow in the field</p>
+							
 						</section>
 						<section>
 							<h2 class="major">Get in Touch</h2>
-							<!--dl class="alt">
-								<dt>Address</dt>
-								<dd>James Madison University</dd>
-								<dt>Phone</dt>
-								<dd>(571) 462-3231 </dd>
-								<dt>Email</dt>
-								<dd><a href="#">law_marfo@aol.com</a></dd>
-							</dl-->
+			
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/le_marfo/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="www.linkedin.com/in/lawrencemarfoEngineering" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
