changed description on projects

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<a href="projects.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Projects</h2>
-										<p>A variety of the projects that I have completed during my College and Corporate. Take a peek into the some of the challenging aspects of managing a team of engineers and creating products for clients...</p>
+										<p>Explore a diverse array of projects I've successfully undertaken during both my college years and corporate career. Delve into the intricacies of managing dynamic teams of engineers and crafting exceptional products for discerning clients. These experiences have honed my ability to navigate challenging aspects of project management and product development.</p>
 										<!--a href="#" class="special"-->
 										<a href="projects.html">Learn more</a>
 										<!-- This links the learn more to the elements page-->
