fixed the elemental views and added the interest

--- a/community.html
+++ b/community.html
@@ -45,7 +45,7 @@
 						<header>
 							<div class="inner">
 								<h2>Community</h2>
-								<p>In this blog post, I will dive into the communities shaped my understanding of the world. These are the vibrant threads that helped me <b>understand</b> my place in society, <b>foster</b> connections, and <b>bolster</b> my sense of belonging.</p>
+								<p>In this blog post, I will dive into the communities that shaped my understanding of the world. These are the vibrant threads that helped me <b>understand</b> my place in society, <b>foster</b> connections, and <b>bolster</b> my sense of belonging.</p>
 							</div>
 						</header>
 
