--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
 											<a href="projects.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="generic.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="projects.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<!-- This code changes the Coding tab-->
-											<h3 class="major">Career</h3>
+											<h3 class="major">Code</h3>
 											<p>Progress in programming is done from failure and failure again. I am just beginning my Corporate journey and I can't wait to see how far I can go. My first endeavor is this website. </p>
-											<a href="generic.html" class="special">Learn more</a>
+											<a href="projects.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="elements.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="interest.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<!-- This code changes the Random Interest tab-->
 											<h3 class="major">Interests</h3>
 											<p> The goal is to be a life long learner. This is populated with things I find interesting</p>
-											<a href="elements.html" class="special">Learn more</a>
+											<a href="interest.html" class="special">Learn more</a>
 											<!--You will have to create a link for this tab-->
 										</article>
 									</section>
