--- a/interest.html
+++ b/interest.html
@@ -64,13 +64,13 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Unveiling Hidden Patterns: Fraud Detection System</h3>
-											<p>One of my most exhilarating projects was the improvement of a cutting-edge fraud detection system for a financial institution. In a landscape rife with ever-evolving fraudulent tactics, crafting a solution that could swiftly and accurately identify suspicious patterns within massive datasets was both challenging and rewarding. Leveraging machine learning algorithms and real-time data processing, we not only bolstered the security of financial transactions but also contributed to safeguarding the trust of countless customers.</p>
+											<p>One of my most exhilarating projects was the development of a cutting-edge fraud detection system for a financial institution. In a landscape rife with ever-evolving fraudulent tactics, crafting a solution that could swiftly and accurately identify suspicious patterns within massive datasets was both challenging and rewarding. Leveraging machine learning algorithms and real-time data processing, we not only bolstered the security of financial transactions but also contributed to safeguarding the trust of countless customers.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Personalization at Scale: Recommender Engine</h3>
-											<p>Another milestone project revolved around building a robust recommender engine. The aim was to deliver personalized product recommendations to millions of users, enhancing their shopping experiences and driving conversions. This endeavor involved orchestrating intricate data pipelines, exploring collaborative and content-based filtering techniques, and fine-tuning algorithms to strike the delicate balance between accuracy and scalability.</p>
+											<p>Another milestone project revolved around building a robust recommender engine. he aim was to deliver personalized product recommendations to millions of users, enhancing their shopping experiences and driving conversions. This endeavor involved orchestrating intricate data pipelines, exploring collaborative and content-based filtering techniques, and fine-tuning algorithms to strike the delicate balance between accuracy and scalability.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
